--- a/CN5_ios/Base.lproj/Main.storyboard
+++ b/CN5_ios/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -396,11 +397,30 @@
                     <view key="view" contentMode="scaleToFill" id="IWZ-ke-U66">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="GCe-Vv-q40">
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <color key="backgroundColor" red="0.89411764709999997" green="0.91372549020000005" blue="0.91372549020000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="pwN-Wv-Ioh" id="gLh-WM-Ivo"/>
+                                    <outlet property="delegate" destination="pwN-Wv-Ioh" id="c3E-Ge-DRR"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="0.89411764709999997" green="0.91764705879999997" blue="0.91372549020000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="GCe-Vv-q40" secondAttribute="trailing" constant="-20" id="CZR-dP-hcl"/>
+                            <constraint firstItem="4w6-Ph-vE3" firstAttribute="top" secondItem="GCe-Vv-q40" secondAttribute="bottom" id="P8K-S0-KwO"/>
+                            <constraint firstItem="GCe-Vv-q40" firstAttribute="top" secondItem="QEC-CO-vAa" secondAttribute="bottom" id="TKA-3W-5EU"/>
+                            <constraint firstItem="GCe-Vv-q40" firstAttribute="leading" secondItem="IWZ-ke-U66" secondAttribute="leadingMargin" constant="-20" id="rh3-QJ-gbf"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="Wve-YG-p0e"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="600" height="600"/>
+                    <connections>
+                        <outlet property="tableView" destination="GCe-Vv-q40" id="c53-9N-yuI"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="R0Q-i3-kfU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
